# insight-engine-schema-python

./: .gitignore  Makefile  README.md  check-for-untracked.sh  pyproject.toml  release.md  requirements.txt  setup.py  tag_and_bump.sh
insight_engine_schema/: test_schema.py
schema/: insight_engine_request.py  insight_engine_response.py  test_schema.py
tests/: test_schema.py
