[tool]
[tool.poetry]
name = "insight_engine_schema"
version = "0.1.3"
description = "Rialtic insight engine schema in Python"
authors = ["Rialtic <engines.data@rialtic.io>"]

# todo: pick license
# license = ""
readme = "README.md"
homepage = "https://rialtic.io"
repository = "https://github.com/rialtic-community/insight-engine-schema-python"
#todo: pick keywords
keywords = ["rialtic", "insight", "engines", "schema"]
# todo: pick classifiers
classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
# include = [
#     "LICENSE",
# ]

[tool.poetry.dependencies]
python = "3.7.*"

"fhir.resources" = "6.*"

[tool.poetry.dev-dependencies]
pytest = ">= 6.2.2"
mypy = ">= 0.800"
pytest-mypy = ">= 0.8.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"